--- a/templates/MattStyle.css
+++ b/templates/MattStyle.css
@@ -1,3 +1,6 @@
+/*css file for createAccount.html
+It is the same format as style.css for login.html but I didn't know how to display createAccount.html and develop it properly*/
+
 * {
 	box-sizing: border-box;
 }
@@ -59,7 +62,7 @@ input:focus {
 	box-shadow: none;
 }
 
-.btn {
+/*.btn {
 	border: 2px solid transparent;
 	background: #000;
 	color: #ffffff;
@@ -74,19 +77,12 @@ input:focus {
 	display: block;
 	width: 100%;
 	max-width: 700px;
-	margin: 0 auto;
+	margin: 10px auto;
 }
 
 .btn:hover {
 	background-color: #2980B9;
-}
-
-.login-link {
-	font-size: 12px;
-	color: #444;
-	display: block;
-	margin-top: 12px;
-}
+}*/
 
 
 .makeAccount {
@@ -118,4 +114,83 @@ input:focus {
 	color: #444;
 	display: block;
 	margin-top: 12px;
+}
+
+
+
+
+/************************************************************************************************************************/
+/*This stuff is for the Create Account page from createAccount.html*/
+
+
+
+.mainScreen {
+	margin: 10% auto;
+	width: 100%;
+	max-width: 700px;
+}
+
+.mainScreen-screen {
+	text-align:center;
+	width: 100%;
+	max-width: 700px;
+	min-width: 200px;
+	height: 75%;
+	max-height: 700px;
+	min-height: 240px;
+	background-color: #FFF;
+	padding: 2%;
+	border-radius: 15px;
+}
+
+.app-title {
+	text-align: center;
+	color: #777;
+}
+
+.mainScreen-form {
+	text-align: center;
+}
+.control-group {
+	margin-bottom: 10px;
+}
+
+input {
+	text-align: center;
+	background-color: #ECF0F1;
+	border: 2px solid transparent;
+	border-radius: 3px;
+	font-size: 16px;
+	font-weight: 200;
+	padding: 10px;
+	width: 100%;
+	max-width: 700px;
+	transition: border .5s;
+}
+
+input:focus {
+	border: 2px solid #3498DB;
+	box-shadow: none;
+}
+
+.createAccount {
+	border: 2px solid transparent;
+	background: #444;
+	color: #ffffff;
+	font-size: 16px;
+	line-height: 25px;
+	padding: 10px ;
+	text-decoration: none;
+	text-shadow: none;
+	border-radius: 3px;
+	box-shadow: none;
+	transition: 0.25s;
+	display: block;
+	width: 100%;
+	max-width: 700px;
+	margin: 0 auto;
+}
+
+.createAccount:hover {
+	background-color: #2980B9;
 }
