--- a/templates/landing.html
+++ b/templates/landing.html
@@ -74,47 +74,50 @@
 						<!--Google JavaScriptAPIkey = AIzaSyCuH8mkgSnqAfX_YswOM4HcLZ5FjnP771A -->
 						<!--GoogleApiKey = AIzaSyDlUUQR0oTKJJX1MCwVKBDj3OTWTExUHvY-->
 						<script>
-function initMap(){
-	var myLatlng = new google.maps.LatLng(40.008473,-105.271322);
-	var mapOptions = {
-		zoom: 15,
-		center: myLatlng
-	}
-	var map = new google.maps.Map(document.getElementById("map"), mapOptions);
+      // Note: This example requires that you consent to location sharing when
+      // prompted by your browser. If you see the error "The Geolocation service
+      // failed.", it means you probably did not give permission for the browser to
+      // locate you.
+      var map, infoWindow;
+      function initMap() {
+        map = new google.maps.Map(document.getElementById('map'), {
+          center: {lat: -34.397, lng: 150.644},
+          zoom: 6
+        });
+        infoWindow = new google.maps.InfoWindow;
 
-	// Place a draggable marker on the map
-	var marker = new google.maps.Marker({
-		position: myLatlng,
-		map: map,
-		draggable:true
-	});
-	var geocoder = new google.maps.Geocoder();
-	google.maps.event.addListener(marker, 'dragend', function() {
-		//updateMarkerStatus('Drag ended');
-		geocodePosition(marker.getPosition());
-	});
-	google.maps.event.addDomListener(window, "resize", function() {
-		   var center = map.getCenter();
-		   google.maps.event.trigger(map, "resize");
-		   map.setCenter(center); 
-	});
-}
-function geocodePosition(pos) {
-	geocoder.geocode({
-		latLng: pos}, 
-		function(responses) {
-		if (responses && responses.length > 0) {
-			console.log(responses[0].formatted_address);
-		} else {
-			updateMarkerAddress('Cannot determine address at this location.');
-		}
-	});
-	console.log(pos)
-}
-						</script>
-						<script async defer
-	   src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCuH8mkgSnqAfX_YswOM4HcLZ5FjnP771A&callback=initMap">
-						</script>
+        // Try HTML5 geolocation.
+        if (navigator.geolocation) {
+          navigator.geolocation.getCurrentPosition(function(position) {
+            var pos = {
+              lat: position.coords.latitude,
+              lng: position.coords.longitude
+            };
+
+            infoWindow.setPosition(pos);
+            infoWindow.setContent('Location found.');
+            infoWindow.open(map);
+            map.setCenter(pos);
+          }, function() {
+            handleLocationError(true, infoWindow, map.getCenter());
+          });
+        } else {
+          // Browser doesn't support Geolocation
+          handleLocationError(false, infoWindow, map.getCenter());
+        }
+      }
+
+      function handleLocationError(browserHasGeolocation, infoWindow, pos) {
+        infoWindow.setPosition(pos);
+        infoWindow.setContent(browserHasGeolocation ?
+                              'Error: The Geolocation service failed.' :
+                              'Error: Your browser doesn\'t support geolocation.');
+        infoWindow.open(map);
+      }
+    </script>
+    <script async defer
+    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC6ekwxzhV3MUiE-Pa6AS71psnxfI-UA6s&callback=initMap">
+    </script>
 					</div>
 				</section>
 				<section class="spotlight">
