--- a/templates/landing.html
+++ b/templates/landing.html
@@ -8,9 +8,9 @@
 	<head>
 		<title> Studi</title>
 		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<meta name="viewport" content="min-width=500px,width=device-width, initial-scale=1, maximum-scale=1" />
 		<!--[if lte IE 8]><script src="../static/js/ie/html5shiv.js"></script><![endif]-->
-		<link rel="stylesheet" href="../static/css/main.css" />
+		<link rel="stylesheet" type="text/css" href="../static/css/main.css?version=50" />
 		<script src="../static/js/backend.js"/></script>
 		<script src="../static/php/database.php"/></script>
 		<!--[if lte IE 8]><link rel="stylesheet" href="../static/css/ie8.css" /><![endif]-->
@@ -51,7 +51,7 @@
 				<li><input id="appl" name="topic" type="radio"><label for="appl">Engineering</label></li>
 			</ul>
 			<ul class="actions fit">
-				<li><input id="form" name="topic" type="radio"><label for="form">Mathematics</label></li>
+				<li><input id="form" name="topic" type="radio"><label for="form">Math</label></li>
 				<li><input id="nats" name="topic" type="radio"><label for="nats">Natural Science </label></li>
 				<li><input id="soci" name="topic" type="radio"><label for="soci">Social Science </label></li>
 			</ul>
