--- a/static/css/main.css
+++ b/static/css/main.css
@@ -3619,7 +3619,7 @@
 	@media screen and (max-width: 480px) and (orientation: portrait) {
 
 		.wrapper {
-			padding: 2em 1em 0.1em 1em ;
+			padding: 40px;
 		}
 
 	}
