--- a/static/style.css
+++ b/static/style.css
@@ -14,10 +14,11 @@ body {
 	margin: 10% auto;
 	width: 100%;
 	max-width: 700px;
+	min-width: 300px;
 }
 .login-screen {
 	text-align:center;
-	width: 100%;
+	width:	100%;
 	max-width: 700px;
 	min-width: 200px;	/* Not sure how to correctly do the minimum width. This doesn't do what I want it to do
 							I want it to behave like min-height does*/
@@ -38,7 +39,9 @@ body {
 	text-align: center;
 }
 .control-group {
-	margin-bottom: 10px;
+	margin-bottom: 10px;		/* Not sure how to get the confirm password with proper spacing below the regular password
+									I think that the change needs to be made here*/
+
 }
 
 input {
@@ -81,12 +84,12 @@ input:focus {
 	background-color: #2980B9;
 }
 
-.login-link {
+/*.login-link {
 	font-size: 12px;
 	color: #444;
 	display: block;
 	margin-top: 12px;
-}
+}*/
 
 
 .makeAccount {
@@ -113,9 +116,22 @@ input:focus {
 }
 
 
-.login-link {
-	font-size: 112px;
-	color: #444;
-	display: block;
-	margin-top: 12px;
+
+.createAccount {
+	margin: 10% auto;
+	width: 100%;
+	max-width: 700px;
+}
+
+.createAccount-screen {
+	text-align:center;
+	width: 100%;
+	max-width: 700px;
+	min-width: 200px;
+	height: 75%;
+	max-height: 700px;
+	min-height: 240px;
+	background-color: #FFF;
+	padding: 2%;
+	border-radius: 15px;
 }
