--- a/templates/login.html
+++ b/templates/login.html
@@ -1,4 +1,5 @@
 <link rel="stylesheet" href="/static/style.css" type="text/css">
+<meta name=viewport content="width=device-width, initial-scale=1, user-scalable=yes">
 {% block body %}
 {% if session['logged_in'] %}
 <p>You're logged in already!</p>
@@ -10,7 +11,6 @@
 			<div class="app-title">
 				<h1>Login</h1>
 			</div>
-
 			<div class="login-form">
 				<div class="control-group">
 					<input type="text" class="login-field" value="" placeholder="username" name="username">
@@ -23,6 +23,8 @@
 				</div>
 
 				<input type="submit" value="Log in" class="btn btn-primary btn-large btn-block" >
+				<a href="/create" class="makeAccount btn-primary btn-large btn-block" >Create Account</a>
+
 				<br>
 			</div>
 		</div>
@@ -31,3 +33,4 @@
 
 {% endif %}
 {% endblock %}
+
