Removed the Create button link and replaced it with a placeholder. Also Changed the css reference line to refresh everytime a user visits.

--- a/templates/landing.html
+++ b/templates/landing.html
@@ -10,7 +10,7 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="min-width=500px,width=device-width, initial-scale=1, maximum-scale=1" />
 		<!--[if lte IE 8]><script src="../static/js/ie/html5shiv.js"></script><![endif]-->
-		<link rel="stylesheet" type="text/css" href="../static/css/main.css?version=50" />
+		<link rel="stylesheet" type="text/css" href="../static/css/main.css?v=<?=time();?>" />
 		<script src="../static/js/backend.js"/></script>
 		<script src="../static/php/database.php"/></script>
 		<!--[if lte IE 8]><link rel="stylesheet" href="../static/css/ie8.css" /><![endif]-->
