--- a/templates/login.html
+++ b/templates/login.html
@@ -23,7 +23,8 @@
 				</div>
 
 				<input type="submit" value="Log in" class="btn btn-primary btn-large btn-block" >
-				<a href="/create" class="makeAccount btn-primary btn-large btn-block" >Create Account</a>
+                <input type="button" value="create" class="btn btn-primary btn-large btn-block" >
+				<!--<a href="/create" class="makeAccount btn-primary btn-large btn-block" >Create Account</a> -->
 
 				<br>
 			</div>
