Further tweaked main.css to look stay consistant across both desktop and mobile Removed some filler content in landing.html

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -9,7 +9,7 @@
 /* Reset */
 
 	html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, embed, figure, figcaption, footer, header, hgroup, menu, nav, output, ruby, section, summary, time, mark, audio, video {
-		margin: 0;
+		/*margin: 0;*/
 		padding: 0;
 		border: 0;
 		font-size: 100%;
@@ -2144,8 +2144,8 @@
 			display: inline-block;
 			font-size: 1em;
 			font-weight: normal;
-			padding-left: 2.4em;
-			padding-right: 0.75em;
+			padding-left: 2em;
+			padding-right: 0.7em;
 			position: relative;
 		}
 
@@ -2614,10 +2614,11 @@
 
 			ul.actions.fit {
 				display: table;
-				margin-left: 1em;
-				padding: 0;
+				padding: 1em;
+				margin-left:2em;
+				margin-right:2em;
 				table-layout: fixed;
-				min-width: 300px;
+				
 				
 			}
 
@@ -2632,7 +2633,7 @@
 					}
 
 				ul.actions.fit.small {
-					margin-left: -0.5em;
+					margin-left: 0.5em;
 					width: calc(100% + 0.5em);
 				}
 
