--- a/templates/landing.html
+++ b/templates/landing.html
@@ -73,51 +73,39 @@
 						</div>
 						<!--Google JavaScriptAPIkey = AIzaSyCuH8mkgSnqAfX_YswOM4HcLZ5FjnP771A -->
 						<!--GoogleApiKey = AIzaSyDlUUQR0oTKJJX1MCwVKBDj3OTWTExUHvY-->
-						<script>
+	<script>
       // Note: This example requires that you consent to location sharing when
       // prompted by your browser. If you see the error "The Geolocation service
       // failed.", it means you probably did not give permission for the browser to
       // locate you.
       var map, infoWindow;
+	  var pos;
+	  
       function initMap() {
-        map = new google.maps.Map(document.getElementById('map'), {
-          center: {lat: -34.397, lng: 150.644},
-          zoom: 6
+		  navigator.geolocation.getCurrentPosition(function(position){
+			 
+			 pos = new google.maps.LatLng(position.coords.latitude, position.coords.longitude);
+			 map = new google.maps.Map(document.getElementById('map'), {
+          center: pos,
+          zoom: 11
         });
-        infoWindow = new google.maps.InfoWindow;
+		        infoWindow = new google.maps.Marker({
+    position: pos,
+	map: map,
+    title:"Hello World!"
+});
+
+		  });
+		  
+		   
+	  }
 
         // Try HTML5 geolocation.
-        if (navigator.geolocation) {
-          navigator.geolocation.getCurrentPosition(function(position) {
-            var pos = {
-              lat: position.coords.latitude,
-              lng: position.coords.longitude
-            };
 
-            infoWindow.setPosition(pos);
-            infoWindow.setContent('Location found.');
-            infoWindow.open(map);
-            map.setCenter(pos);
-          }, function() {
-            handleLocationError(true, infoWindow, map.getCenter());
-          });
-        } else {
-          // Browser doesn't support Geolocation
-          handleLocationError(false, infoWindow, map.getCenter());
-        }
-      }
 
-      function handleLocationError(browserHasGeolocation, infoWindow, pos) {
-        infoWindow.setPosition(pos);
-        infoWindow.setContent(browserHasGeolocation ?
-                              'Error: The Geolocation service failed.' :
-                              'Error: Your browser doesn\'t support geolocation.');
-        infoWindow.open(map);
-      }
     </script>
-    <script async defer
-    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC6ekwxzhV3MUiE-Pa6AS71psnxfI-UA6s&callback=initMap">
-    </script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBjznhok9lVS9qwe2DzQmJXg9TA2Ye2qkk&callback=initMap"
+    async defer></script>
 					</div>
 				</section>
 				<section class="spotlight">
